@startuml
class de.mash1t.cryptography.CryptoBasics
class de.mash1t.cryptography.EncryptionMethod
class de.mash1t.cryptography.SessionIdGenerator
class de.mash1t.cryptography.method.Aes
enum de.mash1t.cryptography.Method
interface de.mash1t.cryptography.crypter
de.mash1t.cryptography.CryptoBasics ..> de.mash1t.cryptography.method.Aes
de.mash1t.cryptography.EncryptionMethod --|> de.mash1t.cryptography.crypter
de.mash1t.cryptography.method.Aes ..> de.mash1t.cryptography.CryptoBasics
de.mash1t.cryptography.method.Aes --|> de.mash1t.cryptography.EncryptionMethod
de.mash1t.cryptography.method.Aes --|> de.mash1t.cryptography.crypter
@enduml